# nira-insog

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_auth_security.py  0003_recurring_patterns.py  0004_embeddings.py  0005_document_hash_dedupe.py  0006_invites.py  0007_hybrid_search.py  0008_canonical_ledger.py  0009_cash_forecast.py
backend/api/: README.md  config.py  deps.py  main.py  middleware.py  schemas.py  security.py
backend/api/routes/: __init__.py  auth.py  dashboard.py  documents.py  feedback.py  forecast.py  insights.py  learning.py  qa.py  search.py  tax.py  team.py  vendors.py
backend/common/: README.md  db.py  enums.py  models.py  storage.py
backend/extraction/: README.md
backend/ingestion/: README.md
backend/insights/: README.md
backend/scripts/: entrypoint.sh  verify_canonical_layer.py
backend/services/: __init__.py  anomalies.py  audit.py  cash_forecast.py  embeddings.py  encryption.py  feedback.py  forecasting.py  qa.py  recurring.py  search_hybrid.py  tenant_settings.py  vendors.py
backend/services/canonical/: __init__.py  accounts.py  dashboard_kpis.py  entities.py  ledger.py
backend/services/connectors/: __init__.py  base.py  registry.py  tally_trial_balance.py
backend/tests/: conftest.py  test_documents.py  test_health.py  test_models.py
backend/understanding/: README.md
backend/worker/: app.py  tasks.py
(+114 files in other folders)
